# TetrisOpenGL

./: .clang  CMakeLists.txt  README.md  instalar.sh  installer.sh
.cache/clangd/index/: _fixes.hpp.4834800046B68873.idx  _fixes.hpp.F308E052D0346FFD.idx  _vectorize.hpp.2F339B4EA800CFEE.idx  _vectorize.hpp.79AD7AB3BDCD42C9.idx  board.cpp.DFE27E9BCA343B43.idx  board.h.1B34FB9B621D2F66.idx  common.hpp.657406181B18395A.idx  common.hpp.7169667E9C9FC0D7.idx  compute_common.hpp.129A6016370817D0.idx  compute_common.hpp.54827C4A6A0EC091.idx  compute_vector_relational.hpp.1537BA44789C7C0F.idx  compute_vector_relational.hpp.CCE7EC978A02CA1F.idx  constants.hpp.621B4C131E90E546.idx  constants.hpp.E5C9B2E062FF3081.idx  constants.inl.3D4131A47EAD3A22.idx  constants.inl.4F9F57FCCF8A24E7.idx  engine.cpp.202F15005EDA4DDB.idx  engine.cpp.EEA9FABB2D824E2B.idx  engine.h.272EE20548208CF7.idx  engine.h.B6130A94CDF36B32.idx  epsilon.hpp.19D24F4B6BAC7683.idx  epsilon.hpp.7F1E338569AF2930.idx  epsilon.inl.8CE2BFD1DA3ECA2A.idx  epsilon.inl.DD0572BC1524A56A.idx  exponential.hpp.6694D54731678EE0.idx  exponential.hpp.6715EAC511DA0722.idx  func_common.inl.9AEDCC59AC0B736A.idx  (+372 more)
assets/shader/: backgroundShader.fs  backgroundShader.vs  shader.vs  textShader.fs  textShader.vs
include/: board.h  engine.h  game.h  movingPiece.h  objeto.h  piece.h  staticPiece.h
include/myLibs/: hashMap.h
include/rendering/: shader.h  sprite.h  text.h  tileSprite.h
src/: board.cpp  engine.cpp  game.cpp  glad.c  main.cpp  movingPiece.cpp  objeto.cpp
src/rendering/: shader.cpp  sprite.cpp  text.cpp  tileSprite.cpp
